# pvk

./: .gitignore  Cargo.toml  Makefile  README  README.md  TODO  cmp.sh  expand.sh  make.bat  run.bat  test_build.sh  vd_build.sh
check_vuids/: Cargo.toml  build.rs
check_vuids/src/: file_edits.rs  lib.rs  main.rs  must_next.rs  parse.rs  vuid_check.rs  vuids.rs
check_vuids/src/vuid_check/: file_vuids.rs
generator/: Cargo.toml  Makefile  TODO  build.bat  make.bat  test_build.sh
generator/examples/: temp.rs
generator/src/: aliases.rs  bitmask_traits.rs  cfield.rs  code_generator.rs  code_parts.rs  commands.rs  constants.rs  ctype.rs  definitions.rs  dependencies.rs  enum_properties.rs  enumerations.rs  extensions.rs  features.rs  gen_lib.rs  gen_lib_cmd.rs  global_data.rs  intern.rs  lib.rs  methods.rs  sdk.rs  simple_parse.rs  static_code.rs  stdout.rs  struct.rs  token_iter.rs  traits.rs  ty.rs  types.rs  utils.rs  vk_parse_visitor.rs  vkxml_visitor.rs  vuid.rs  vuid_generator.rs  vuid_visitor.rs  vulkansc.rs
generator/src/enum_properties/: format.rs  queue.rs  structure_type.rs
generator/src/vuid_visitor/: vuid_parser.rs
vk-safe/: Cargo.toml  build.rs  lunarg database.txt  rustfmt.toml
vk-safe-sys/: Cargo.toml  build.rs
vk-safe-sys/examples/: vk_safe_tst.rs
vk-safe-sys/src/: commands.rs  commands_old.rs  context.rs  extension.rs  extension_old.rs  lib.rs  utils.rs  version.rs  version_utils.rs
vk-safe-sys/src/generated_vulkan/: mod.rs
vk-safe/examples/: one.rs
vk-safe/src/: array_storage.rs  bitflags.rs  device.rs  device_type.rs  dispatchable_handles.rs  entry.rs  enumerator.rs  enumerator_storage.rs  error.rs  error_macros.rs  flags.rs  handles.rs  helper_macros.rs  instance.rs  instance_type.rs  lib.rs  non_dispatchable_handles.rs  physical_device.rs  pretty_version.rs  queue_type.rs  scope.rs  spirv.rs  structs.rs  type_conversions.rs  utils.rs  vk_str.rs
vk-safe/src/bitflags/: bitflag_macros.rs  image_usage_flags.rs
vk-safe/src/device/: allocate_memory.rs
vk-safe/src/device_type/: allocate_memory.rs  get_device_queue.rs  map_memory.rs  unmap_memory.rs  wait_idle.rs
vk-safe/src/dispatchable_handles/: common.rs  device.rs  device_type.rs  instance.rs  instance_type.rs  physical_device.rs  queue.rs  queue_type.rs
vk-safe/src/entry/: create_instance.rs  enumerate_instance_extension_properties.rs  enumerate_instance_layer_properties.rs  enumerate_instance_version.rs
vk-safe/src/handles/: command_buffer.rs  command_pool.rs  device.rs  device_memory.rs  instance.rs  physical_device.rs  queue.rs  shader_module.rs
vk-safe/src/instance/: enumerate_physical_devices.rs
vk-safe/src/instance_type/: enumerate_physical_devices.rs
vk-safe/src/non_dispatchable_handles/: device_memory.rs
vk-safe/src/physical_device/: create_device.rs  enumerate_device_extension_properties.rs  enumerate_device_layer_properties.rs  get_physical_device_features.rs  get_physical_device_format_properties.rs  get_physical_device_image_format_properties.rs  get_physical_device_memory_properties.rs  get_physical_device_properties.rs  get_physical_device_queue_family_properties.rs  get_physical_device_sparse_image_format_properties.rs
vk-safe/src/safe_interface/: commands.rs  enumerator_storage.rs  mod.rs  structs.rs  type_conversions.rs
vk-safe/src/structs/: application_info.rs  (+18 more)
(+91 files in other folders)
