[package]
name = "pvk"
version = "0.1.0"
authors = ["Chris von Zuben <chris.vonzuben@gmail.com>"]
edition = "2018"

[dependencies]
vkxml = "*"
proc-macro2 = "*"
once_cell = "1.2.0"

[dependencies.quote]
version = "*"

[dependencies.syn]
version = "*"
features = ["full"]

[dependencies.vk-parse]
# path = "../vk-parse/vk-parse"
version = "0.5.0"
features = ["vkxml-convert"]
#version = "0.2.0"
