[package]
name = "check_vuids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vuids"
path = "src/main.rs"

[dependencies]
generator = { path="../generator" }

[build-dependencies]
generator = { path="../generator" }