[package]
name = "generator"
version = "0.1.0"
authors = ["Chris von Zuben <chris.vonzuben@gmail.com>"]
edition = "2018"

[lib]
name = "generator"
path = "src/lib.rs"

[[bin]]
name = "vk_stdout"
path = "src/stdout.rs"

[dependencies]
vkxml = "*"
proc-macro2 = "*"
once_cell = "1.2.0"
krs_quote = { path = "../krs_quote" }

[dependencies.quote]
version = "*"

[dependencies.vk-parse]
# path = "../../vk-parse/vk-parse"
version = "0.6.0"
features = ["vkxml-convert"]
#version = "0.2.0"
