[package]
name = "generator"
version = "0.1.0"
authors = ["Chris von Zuben <chris.vonzuben@gmail.com>"]
edition = "2018"

[lib]
name = "generator"
path = "src/lib.rs"

[[bin]]
name = "vk_stdout"
path = "src/stdout.rs"

[dependencies]
vkxml = "*"
krs_quote = { path = "../krs_quote" }

[dependencies.vk-parse]
# path = "../../vk-parse/vk-parse"
version = "0.6.0"
features = ["vkxml-convert"]
#version = "0.2.0"
