[package]
name = "generator"
version = "0.1.0"
authors = ["Chris von Zuben <chris.vonzuben@gmail.com>"]
edition = "2018"

[lib]
name = "generator"
path = "src/lib.rs"

[[bin]]
name = "vk_stdout"
path = "src/stdout.rs"

[[bin]]
name = "gen_lib_cmd"
path = "src/gen_lib_cmd.rs"

[dependencies]
krs_quote = { path = "../krs_quote" }

[dependencies.vk-parse]
version = "0.6.0"
