[package]
name = "vk-safe-sys"
version = "0.1.0"
authors = ["Chris von Zuben <chris.vonzuben@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["generate"]
generate = []

[build-dependencies]
generator = { path="../generator" }
