[package]
name = "vk-safe"
version = "0.1.0"
authors = ["Chris von Zuben <chris.vonzuben@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vk-safe-sys = { path = "../vk-safe-sys" }
check_vuids = { path = "../check_vuids" }

# [build-dependencies]
# vk-safe-sys = { path="../vk-safe-sys", features=["generate"] }